--- a/global_consult/index.css
+++ b/global_consult/index.css
@@ -32,9 +32,8 @@ nav ul li{
 
 }
 #bgimg{
-	width: 100%;
-	height: 100%;
-}
-#bgimg1{
+	background-image: url("images/1.jpg") 
 	width:100%;
+	/*background-color: blue;padding-top: 50%;*/
+
 }
