--- a/global_consult/index.css
+++ b/global_consult/index.css
@@ -13,7 +13,7 @@ header{
 	padding-top: 10px;
 	padding-bottom: 1%;
 	border-bottom: 1px solid black;
-	opacity: 0.70;
+	opacity: 0.90;
 }
 #logo{
 	padding-left: 100px;
@@ -28,12 +28,30 @@ ul{
 }
 nav ul li{
 	display: inline-block;
-	padding-bottom:;
 
 }
 #bgimg{
-	background-image: url("images/1.jpg") 
+	width: 100%;
+	height: 100%;
+}
+#bgimg1{
 	width:100%;
-	/*background-color: blue;padding-top: 50%;*/
-
+}
+section{
+	width: 29%;
+	float: left;
+	text-align: center;
+	margin: 2% 2%;
+}
+footer{
+	background-color: #333333;
+	width: 100%;
+	opacity: 0.90;
+}
+footer.second{
+	border-top: 1px solid #4D4E50;
+	background-color: #333333;
+	max-height: 50px;
+	text-align:center;
+	opacity: 0.95;
 }
