--- a/global_consult/index.css
+++ b/global_consult/index.css
@@ -31,6 +31,27 @@ img#glogo{
 #nav-links{
 	height: 70px;
 }
+.servicesh{
+	background-image: url('../images/home-contact-bg.jpg');
+}
+.service-title{
+	padding-top: 5%;
+	padding-bottom: 15%;
+	padding-left: 5%;
+	padding-right: 5%;
+	text-shadow: rgb(255, 11, 3);
+	text-align: center;
+}
+.terml-wrap{
+	padding: 15px;
+}
+.terml{
+	background-color: #eceff1;
+	padding: 10px;
+	border-radius: 4px;
+	border: 2px solid #9ccc65;
+	box-shadow: 0.5 #eee;
+}
 /**{
 	margin:0px;
 	border:0px;
